--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/car-ar.loader.js";
       var config = {
-        dataUrl: buildUrl + "/car-ar.data.gz",
-        frameworkUrl: buildUrl + "/car-ar.framework.js.gz",
-        codeUrl: buildUrl + "/car-ar.wasm.gz",
+        dataUrl: buildUrl + "/car-ar.data",
+        frameworkUrl: buildUrl + "/car-ar.framework.js",
+        codeUrl: buildUrl + "/car-ar.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebAR-CarController",
